# hh-parser

./: README.md  pyproject.toml
src/: database.py  db_manager.py  employer.py  hh_api.py  main.py  queries.sql  utils.py  vacancy.py
tests/: test_database.py  test_db_manager.py  test_employer.py  test_hh_api.py  test_utils.py  test_vacancy.py
