[tool.poetry]
name = "hh-parser"
version = "0.2.0"
description = ""
authors = "Dmitry Kaptan (Kaverz1n)"
readme = "README.md"
packages = [{include = "hh_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
